examples/test/testpolicy12131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12131
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key8: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value35
          key1: value45
      podSelector:
        matchLabels:
          key16: value29
          key41: value41
          key34: value10
